--- a/app/views/category_formulas/_form.html.erb
+++ b/app/views/category_formulas/_form.html.erb
@@ -15,6 +15,13 @@
     </div>
     <div class='row'>
       <div class='col-md-12'>
+        <span>x的值:&nbsp;</span><input id='calculate_x' type='number'></input>
+        <btn id='calculate' class='btn btn-primary' onclick='calculate()'>计算</btn>
+        <span>结果:&nbsp;</span><input id='calculate_result' type='number'></input>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-md-12'>
         <%= f.label :top_limit, '上限' %>
         <%= f.number_field :top_limit, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
       </div>
