--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -4,37 +4,31 @@
     <div class='row'>
       <div class='col-md-12'>
         <%= f.label :app_name, 'APP名称' %>
-        <%= f.text_field :app_name, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
+        <%= f.text_field :app_name, { required: true, 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
       </div>
     </div>
     <div class='row'>
       <div class='col-md-12'>
         <%= f.label :app_id, 'APP ID' %>
-        <%= f.number_field :app_id, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
+        <%= f.number_field :app_id, { required: true, 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
       </div>
     </div>
     <div class='row'>
       <div class='col-md-12'>
         <%= f.label :firm_name, '公司名称' %>
-        <%= f.text_field :firm_name, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
-      </div>
-    </div>
-    <div class='row'>
-      <div class='col-md-12'>
-        <%= f.label :registration_time, '注册时间' %>
-        <%= f.date_field :registration_time, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
+        <%= f.text_field :firm_name, { required: true, 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
       </div>
     </div>
     <div class='row'>
       <div class='col-md-12'>
         <%= f.label :status, '状态' %>
-        <%= f.number_field :status, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
+        <%= f.select :status, App.status_types, { required: true, class: 'form-control', id: 'group-select', 'data-qa': 'form-group-dropdown'} %>
       </div>
     </div>
     <div class='row'>
       <div class='col-md-12'>
         <%= f.label :comment, '备注' %>
-        <%= f.text_field :comment, { required: '', 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
+        <%= f.text_field :comment, { required: false, 'data-parsley-maxlength': Constants::MAX_STRING_LEN, class: 'form-control' } %>
       </div>
     </div>
     <div class='row'>&nbsp;</div>
