set text to ignore parsley-error

--- a/app/views/category_formulas/_form.html.erb
+++ b/app/views/category_formulas/_form.html.erb
@@ -17,7 +17,7 @@
       <div class='col-md-12'>
         <span>x的值:&nbsp;</span><input id='calculate_x' type='number'></input>
         <btn id='calculate' class='btn btn-primary' onclick='calculate()'>计算</btn>
-        <span>结果:&nbsp;</span><input id='calculate_result' type='number'></input>
+        <span>结果:&nbsp;</span><input id='calculate_result' type='text'></input>
       </div>
     </div>
     <div class='row'>
