--- a/app/views/category_formulas/_form.html.erb
+++ b/app/views/category_formulas/_form.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div class='row'>
       <div class='col-md-12'>
-        <span>x的值:&nbsp;</span><input id='calculate_x' type='number'></input>
+        <span>x的值:&nbsp;</span><input id='calculate_x' type='text'></input>
         <btn id='calculate' class='btn btn-primary' onclick='calculate()'>计算</btn>
         <span>结果:&nbsp;</span><input id='calculate_result' type='text'></input>
       </div>
