--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -10,7 +10,7 @@
       <p data-qa='home-how-text'>Greentest Mini API Manager与你的类别项目通过一个安全的、HIPAA兼容,可靠的管道由Greentest网络。这允许您自信地、可靠地跟踪指标,得到警报,和在运行时监控你的类别的健康项目!
     </div>
     <div class='home-info-section'>
-      <%= image_tag 'background.jpg', id: 'greentest-diagram', data: { qa: 'home-diagram-image' } %>
+      <%= image_tag 'background.png', id: 'greentest-diagram', data: { qa: 'home-diagram-image' } %>
     </div>
     <div class='home-info-section'>
       <h3 data-qa='home-where-heading'>了解更多?</h3>
