correct words and comments

--- a/app/views/api_manages/_api_manage_index.html.erb
+++ b/app/views/api_manages/_api_manage_index.html.erb
@@ -3,7 +3,7 @@
     <div class='card-box table-responsive'>
       <%= render 'shared/table_header',
                  title: '接口管理',
-                 tooltip_message: "<h6>APP</h6>",
+                 tooltip_message: "<h6>接口管理</h6>",
                  link: new_api_manage_path %>
       <table id='datatable-responsive'
              class='table table-striped table-bordered dt-responsive nowrap'
