--- a/app/views/category_requests/_category_request_index.html.erb
+++ b/app/views/category_requests/_category_request_index.html.erb
@@ -3,7 +3,7 @@
     <div class='card-box table-responsive'>
       <%= render 'shared/table_header',
                  title: '下载请求',
-                 tooltip_message: "<h6>下载请求</h6>",
+                 tooltip_message: "下载请求",
                  link: nil %>
       <table id='datatable-responsive'
              class='table table-striped table-bordered dt-responsive nowrap'
