--- a/app/views/resolution_requests/_resolution_request_index.html.erb
+++ b/app/views/resolution_requests/_resolution_request_index.html.erb
@@ -2,8 +2,8 @@
   <div class='col-sm-12'>
     <div class='card-box table-responsive'>
       <%= render 'shared/table_header',
-                 title: '下载请求',
-                 tooltip_message: "<h6>下载请求</h6>",
+                 title: '解析请求',
+                 tooltip_message: "解析请求",
                  link: nil %>
       <table id='datatable-responsive'
              class='table table-striped table-bordered dt-responsive nowrap'
