--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='theme-color' content='#15BECE'/>
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag asset_path('greentest-logo.png'), rel: 'icon', type: 'image/png', data: { qa: 'tab-favicon' } %>
+    <%= favicon_link_tag asset_path('greentest-logo-grey-32-32.png'), rel: 'icon', type: 'image/png', data: { qa: 'tab-favicon' } %>
     <%= stylesheet_link_tag 'application',
                             'media': 'all',
                             'data-turbolinks-track': 'reload' %>
