--- a/app/views/resolution_requests/_resolution_request_index.html.erb
+++ b/app/views/resolution_requests/_resolution_request_index.html.erb
@@ -35,7 +35,7 @@
               <td><%= resolution_request.request_ip %></td>
               <td><%= resolution_request.appuser_id %></td>
               <td><%= resolution_request.hardware_id %></td>
-              <td><%= resolution_request.id_code %></td>
+              <td><%= resolution_request.decode %></td>
               <td><%= resolution_request.gps %></td>
               <td><%= resolution_request.category_number %></td>
               <td><%= resolution_request.formula_version %></td>
