send base64 as id code

--- a/app/views/category_requests/_category_request_index.html.erb
+++ b/app/views/category_requests/_category_request_index.html.erb
@@ -25,7 +25,7 @@
               <td><%= category_request.app_id %></td>
               <td><%= category_request.request_ip %></td>
               <td><%= category_request.appuser_id %></td>
-              <td><%= category_request.decode %></td>
+              <td><%= category_request.base_decode %></td>
               <td><%= category_request.request_time %></td>
               <td><%= CategoryRequest.release_types.invert[category_request.release_status] %></td>
               <td><%= CategoryRequest.exceptions.invert[category_request.request_status] %></td>
