--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class='home-info-section'>
       <h3 data-qa='home-where-heading'>了解更多?</h3>
-      <p data-qa='home-where-text'>查看以下链接 <a href='#', target='_blank'>
+      <p data-qa='home-where-text'>查看以下链接 <a href='API_DOC', target='_blank'>
       API文档</a>!</p>
     </div>
     <% unless current_user.present? %>
