--- a/app/views/static_page/api_doc.html.erb
+++ b/app/views/static_page/api_doc.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, '接口文档') %>
 <div class="container clearfix blog-content-box" id="mainBox">
   <main>
     <div class="blog-content-box">
@@ -114,12 +115,12 @@
         <tbody>
           <tr>
           <td>success</td>
-          <td>string</td>
+          <td>布尔</td>
           <td>正确／错误提示</td>
           </tr>
           <tr>
           <td>code</td>
-          <td>number</td>
+          <td>整数</td>
           <td>错误码</td>
           </tr>
           <tr>
@@ -148,17 +149,17 @@
         <tbody>
           <tr>
           <td>success</td>
-          <td>string</td>
+          <td>布尔</td>
           <td>正确／错误提示</td>
           </tr>
           <tr>
           <td>code</td>
-          <td>number</td>
+          <td>整数</td>
           <td>错误码</td>
           </tr>
           <tr>
           <td>reason</td>
-          <td>string</td>
+          <td>字符串</td>
           <td>错误描述</td>
           </tr>
         </tbody>
