--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -17,6 +17,9 @@
       <p data-qa='home-where-text'>查看以下链接
         <a href='api_doc', target='_blank'>API文档</a>!
       </p>
+      <p data-qa='home-where-text'>查看以下链接
+        <a href='documentation', target='_blank'>说明文档</a>!
+      </p>
     </div>
     <% unless current_user.present? %>
       <div class='home-info-section'>
