--- a/app/views/shared/_table_header.html.erb
+++ b/app/views/shared/_table_header.html.erb
@@ -6,6 +6,6 @@
     <%= title %>
   </div>
   <% if link.present? %>
-    <a href=<%= link %>><span class='mdi mdi-plus-circle', data-qa='create-button'><span></a>
+    <a href=<%= "#" %>><span class='mdi mdi-plus-circle', data-qa='create-button'><span></a>
   <% end %>
 </div>
