--- a/app/views/static_page/api_doc.html.erb
+++ b/app/views/static_page/api_doc.html.erb
@@ -4,7 +4,7 @@
     <div class="blog-content-box">
     	<div class="article-header-box">
     		<div class="article-header">
-    			<div class="article-title-box"><h1 class="title-article">Greentest API 接口文档</h1></div>
+    			<div class="article-title-box"><h1 class="title-article">Douyin Hot API 接口文档</h1></div>
     		</div>
       </div>
       <article class="baidu_pl">
