--- a/app/views/videos/_video_index.html.erb
+++ b/app/views/videos/_video_index.html.erb
@@ -10,7 +10,7 @@
              cellspacing='0' width='100%'>
         <thead>
           <tr>
-            <th data-priority='1'>抖音名称</th>
+            <th data-priority='1'>名称</th>
             <th data-priority='1'>抖音号</th>
             <th data-priority='1'>视频名称</th>
             <th data-priority='1'>视频编号</th>
