--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | 绿食宝</title>
+    <title><%= yield(:title) %> | DouyinHot</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='theme-color' content='#15BECE'/>
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag asset_path('greentest-logo-grey-32-32.png'), rel: 'icon', type: 'image/png', data: { qa: 'tab-favicon' } %>
+    <%= favicon_link_tag asset_path('hot32X32.png'), rel: 'icon', type: 'image/png', data: { qa: 'tab-favicon' } %>
     <%= stylesheet_link_tag 'application',
                             'media': 'all',
                             'data-turbolinks-track': 'reload' %>
