--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -3,14 +3,14 @@
   <div class='col-md-6 col-md-offset-3'>
     <div class='home-info-section'>
       <h3 data-qa='home-what-heading'>什么是 Douyin Hot?</h3>
-      <p data-qa='home-what-text'>Douyin Hot是一个分析，监视，管理和更新某音热门视频的工具.
+      <p data-qa='home-what-text'>Douyin Hot是一个分析，监视，管理和更新某音热门视频ike，comment，attention，release time的工具。
     </div>
     <div class='home-info-section'>
       <h3 data-qa='home-how-heading'>它是如何工作的呢?</h3>
       <p data-qa='home-how-text'>Douyin Hot与你的类别项目通过一个安全的、HIPAA兼容,可靠的管道由Hot网络。这允许您自信地、可靠地跟踪指标,得到警报,和在运行时监控你的类别的健康项目!
     </div>
     <div class='home-info-section'>
-      <%= image_tag 'douyinhot.png', id: 'douyinhot-diagram', data: { qa: 'home-diagram-image' } %>
+      <%= image_tag 'douyinwanyi.png', id: 'douyinhot-diagram', data: { qa: 'home-diagram-image' } %>
     </div>
     <div class='home-info-section'>
       <h3 data-qa='home-where-heading'>了解更多?</h3>
