--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class='col-xs-12 text-center'>
         <span class='footer-text'>技术支持</span>
         <span id='logo-block'>
-          <%= image_tag 'greentest-logo-golden.png', id: 'greentest-logo-golden' %>
+          <%= image_tag 'hot32X32.png', id: 'hot' %>
         </span>
       </div>
     </div>
