--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -70,6 +70,9 @@
               <% if can? :index, Video %>
                 <li><%= link_to '视频', videos_path, data: { qa: 'menu-organization' } %></li>
               <% end %>
+              <% if can? :index, KaoguProduction %>
+                <li><%= link_to '考古商品', kaogu_productions_path, data: { qa: 'menu-organization' } %></li>
+              <% end %>
             </ul>
           </li>
         </ul>
